--- a/blocks/card/__like-button/card__like-button.css
+++ b/blocks/card/__like-button/card__like-button.css
@@ -1,16 +1,17 @@
-.elements__like-button {
+.card__like-button {
     background-image: url(../../../images/Vector.svg);
     background-position: center;
     background-repeat: no-repeat;
     background-color: #fff;
     min-width: 22px;
     min-height: 19px;
-    margin: 0;
     padding: 0;
     border: none;
+    align-self: flex-start;
+    margin: 0 5px 1px 0;
 }
 
-.elements__like-button:hover {
+.card__like-button:hover {
     cursor: pointer;
     opacity: .5;
 }
