--- a/blocks/profile/__add-button/profile__add-button.css
+++ b/blocks/profile/__add-button/profile__add-button.css
@@ -3,6 +3,7 @@
     min-width: 150px;
     height: 50px;
     background-image: url(../../../images/Plus.svg);
+    background-size: 22px;
     background-color: #000;
     background-position: center;
     background-repeat: no-repeat;
@@ -17,5 +18,6 @@
 @media screen and (max-width: 889px) {
     .profile__add-button {
         width: 282px;
+        background-size: 16px;
     }
 }
