--- a/blocks/profile/__description/profile__description.css
+++ b/blocks/profile/__description/profile__description.css
@@ -3,6 +3,11 @@
     font-weight: 400;
     font-size: 18px;
     line-height: 22px;
+
+    text-overflow: ellipsis;
+    overflow: hidden;
+    white-space: nowrap;
+    max-width: 457px;
 }
 
 @media screen and (max-width: 889px) {
