--- a/blocks/profile/__edit-button/profile__edit-button.css
+++ b/blocks/profile/__edit-button/profile__edit-button.css
@@ -8,6 +8,7 @@
     background-repeat: no-repeat;
     background-color: #000;
     border: 1px solid #fff;
+    align-self: center;
 }
 
 .profile__edit-button:hover {
