--- a/blocks/profile/__name/profile__name.css
+++ b/blocks/profile/__name/profile__name.css
@@ -3,6 +3,11 @@
     font-size: 42px;
     line-height: 48px;
     font-weight: 500;
+
+    text-overflow: ellipsis;
+    overflow: hidden;
+    white-space: nowrap;
+    max-width: 457px;
 }
 
 @media screen and (max-width: 889px) {
