--- a/pages/index.css
+++ b/pages/index.css
@@ -18,12 +18,13 @@
 @import url(../blocks/profile/__add-button/profile__add-button.css);
 
 @import url(../blocks/elements/elements.css);
-@import url(../blocks/elements/__card/element__card.css);
-@import url(../blocks/elements/__card-image/elements__card-image.css);
-@import url(../blocks/elements/__info/elements__info.css);
-@import url(../blocks/elements/__title/elements__title.css);
-@import url(../blocks/elements/__like-button/elements__like-button.css);
-@import url(../blocks/elements/__like-button/_active/elements__like-button_active.css);
+
+@import url(../blocks/card/card.css);
+@import url(../blocks/card/__image/card__image.css);
+@import url(../blocks/card/__info/card__info.css);
+@import url(../blocks/card/__title/card__title.css);
+@import url(../blocks/card/__like-button/card__like-button.css);
+@import url(../blocks/card/__like-button/_active/card__like-button_active.css);
 
 @import url(../blocks/footer/footer.css);
 @import url(../blocks/footer/__copyright/footer__copyright.css);
