--- a/blocks/popup/__container/popup__container.css
+++ b/blocks/popup/__container/popup__container.css
@@ -1,5 +1,6 @@
 .popup__container {
-    width: 430px;
+    max-width: 430px;
+    width: 100%;
     background-color: #fff;
     box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.15);
     border-radius: 10px;
@@ -11,6 +12,6 @@
 
 @media screen and (max-width: 600px) {
     .popup__container {
-        width: 282px;
+        max-width: 282px;
     }
 }
