--- a/blocks/profile/__add-button/profile__add-button.css
+++ b/blocks/profile/__add-button/profile__add-button.css
@@ -13,6 +13,7 @@
 .profile__add-button:hover {
     cursor: pointer;
     opacity: .6;
+    transition: .5s;
 }
 
 @media screen and (max-width: 889px) {
