--- a/blocks/profile/__edit-button/profile__edit-button.css
+++ b/blocks/profile/__edit-button/profile__edit-button.css
@@ -14,6 +14,7 @@
 .profile__edit-button:hover {
     cursor: pointer;
     opacity: .6;
+    transition: .5s;
 }
 
 @media screen and (max-width: 425px) {
