--- a/src/blocks/popup/__close-button/popup__close-button.css
+++ b/src/blocks/popup/__close-button/popup__close-button.css
@@ -15,6 +15,7 @@
 .popup__close-button:hover {
     cursor: pointer;
     opacity: .6;
+    transition: .5s;
 }
 
 @media screen and (max-width: 600px) {
