--- a/src/blocks/popup/__save-button/popup__save-button.css
+++ b/src/blocks/popup/__save-button/popup__save-button.css
@@ -16,6 +16,13 @@
     opacity: .8;
 }
 
+.popup__save-button:disabled {
+    cursor: default;
+    background-color: #fff;
+    color: rgba(0, 0, 0, .2);
+    border: 1px solid rgba(0, 0, 0, .2);
+}
+
 @media screen and (max-width: 600px) {
     .popup__save-button {
         max-width: 238px;
