--- a/src/blocks/header/header.css
+++ b/src/blocks/header/header.css
@@ -3,7 +3,7 @@
     padding: 45px 0 41px;
     display: flex;
     justify-content: flex-start;
-    align-items: start;
+    align-items: flex-start;
     border-bottom: 1px solid rgba(84, 84, 84, .7);
 }
 
