--- a/src/blocks/popup/__save-button/popup__save-button.css
+++ b/src/blocks/popup/__save-button/popup__save-button.css
@@ -1,5 +1,5 @@
 .popup__save-button {
-    margin-bottom: 37px;
+    margin: 30px 0 37px 0;
     padding: 0;
     background-color: #000;
     color: #fff;
