--- a/src/blocks/card/__like-button/card__like-button.css
+++ b/src/blocks/card/__like-button/card__like-button.css
@@ -7,8 +7,8 @@
     min-height: 19px;
     padding: 0;
     border: none;
-    align-self: flex-start;
-    margin: 0 5px 1px 0;
+    /* align-self: flex-start; */
+    /* margin: 0 5px 1px 0; */
 }
 
 .card__like-button:hover {
