--- a/src/blocks/profile/__edit-button/profile__edit-button.css
+++ b/src/blocks/profile/__edit-button/profile__edit-button.css
@@ -3,7 +3,7 @@
     height: 24px;
     margin: 0;
     padding: 0;
-    background-image: url(../../../images/Edit\ Button.svg);
+    background-image: url(../../../images/EditButton.svg);
     background-position: center;
     background-repeat: no-repeat;
     background-color: #000;
